--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
             h1{
                 text-align : center;
                 color : rgb(255,255,255);
-                font-weight : 600;
+                font-weight : 300;
+                font-size : 150px;
             }
             
             h2{
