--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
         
         <p>Badminton saison 2024-25 : 
         <p>retour sur les terrains</p>
+        <img scr ="https://commons.wikimedia.org/wiki/File:Shuttlecocks_Yonex_Aerosensa_20.jpg?uselang=fr" alt="volant en plume" width=200>
         
          <h2 id="musique">La musique</h2>
          <h6>Posté le 26/09/2024</h6>
