--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         
         <p>Badminton saison 2024-25 : 
         <p>retour sur les terrains</p>
-        <img src ="https://cdn.kastatic.org/third_party/javascript-khansrc/live-editor/build/images/avatars/aqualine-tree.png" alt="the coolest creature" width="200">
+        <img src ="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d0/Shuttlecocks_Yonex_Aerosensa_20.jpg/220px-Shuttlecocks_Yonex_Aerosensa_20.jpg" alt="the coolest creature" width="200">
         
          <h2 id="musique">La musique</h2>
          <h6>Posté le 26/09/2024</h6>
