--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
             h6{
                 font-style :italic;
             }
+
+            p:hover {
+                font-size: 150px;
+                transition: font-size 1s linear;
+            }
         </style>
     </head>
     <body>
