--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@
         <h1>Le blog d'Oli</h1>
 
         <audio src="/Programmation/hello-46355.mp3"></audio>
+
+        <video scr="/Programmation/hello-46355.mp3"></video>
         
         <button id="clicker">Boring button</button>
         
