--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         
         <h1>Le blog d'Oli</h1>
 
-        <audio src="/Programmation/hello-46355.mp3"></audio>
+        <audio src="hello-46355.mp3"></audio>
 
         <video scr="/Programmation/hello-46355.mp3"></video>
         
