--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
         <audio src="hello-46355.mp3"></audio>
 
-        <video scr="/Programmation/hello-46355.mp3"></video>
+        <video scr="hello-46355.mp3"></video>
         
         <button id="clicker">Boring button</button>
         
